Fixed mergers and neighbours in guide, better spacing under h2 headings

--- a/css/pages.styl
+++ b/css/pages.styl
@@ -91,10 +91,11 @@
       font-weight 600
       text-shadow 0px 1px 0px rgba(255, 255, 255, 0.25)
       text-transform uppercase
-      padding 30px 0
+      padding 10px 0
       border-bottom 1px solid $boxline
       box-shadow 0px 1px 0px $boxlineshadow
-    
+      margin-bottom 20px
+   
     .guide-menu
       @extends #clearfix
       @extends #semantic-list
